--- a/vue双向数据绑定/index.html
+++ b/vue双向数据绑定/index.html
@@ -15,8 +15,14 @@
   </div>
   <script src="./vue.js"></script>
   <script>
-    new Vue({
-      el: "app"
+    const app = new Vue({
+      el: "app",
+      data: {
+        name: 'ckk',
+        nore: {
+          like: '在算一次'
+        }
+      }
     })
   </script>
 </body>
