--- a/vue双向数据绑定/index.html
+++ b/vue双向数据绑定/index.html
@@ -16,10 +16,10 @@
   <script src="./vue.js"></script>
   <script>
     const app = new Vue({
-      el: "app",
+      el: "#app",
       data: {
         name: 'ckk',
-        nore: {
+        more: {
           like: '在算一次'
         }
       }
